--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.1.2"
+pymysql = "^1.1.1"
+cryptography = "^43.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -15,6 +17,8 @@ black = "^24.10.0"
 isort = "^5.13.2"
 mypy = "^1.12.0"
 django-stubs = "^5.1.0"
+coverage = "^7.6.3"
+types-pymysql = "^1.1.0.20240524"
 
 [build-system]
 requires = ["poetry-core"]
